--- a/onsharp-copy/index.html
+++ b/onsharp-copy/index.html
@@ -137,25 +137,25 @@
                 <div class="location-number">
                     3
                 </div>
-                <div class="location-text">
+                <p class="location-text">
                     OFFICE LOCATIONS
-                </div>
+                </p>
             </div>
             <div class="col-md-4 p-0">
                 <div class="location-number">
                     18
                 </div>
-                <div class="location-text">
+                <p class="location-text">
                     STATES WHERE WE SERVE CLIENTS
-                </div>
+                </p>
             </div>
             <div class="col-md-4 p-0">
                 <div class="location-number">
                     250+
                 </div>
-                <div class="location-text">
+                <p class="location-text">
                     ACTIVE CLIENTS
-                </div>
+                </p>
             </div>
         </div>
     </div>
@@ -239,7 +239,7 @@
             </div>
         </div>
 
-        <div style="margin-top: 110px" class="serv-card-row row d-flex justify-content-between">
+        <div style="margin-top: 50px" class="serv-card-row row d-flex justify-content-between">
             <div class="col-md-4">
                 <div class="serve-card">
                     <div class="serve-image">
@@ -294,7 +294,7 @@
             </div>
         </div>
 
-        <div style="margin-top: 110px" class="serv-card-row row d-flex justify-content-between">
+        <div style="margin-top: 50px" class="serv-card-row row d-flex justify-content-between">
             <div class="col-md-4">
                 <div class="serve-card">
                     <div class="serve-image">
@@ -388,36 +388,257 @@
                 </div>
             </div>
         </div>
-        <div class="row">
-            <div class="offset-md-1 col-md-2">
+
+        <div class="row company-cards-row">
+            <div class="col-lg col-12 col-md-6">
                 <a href="#" class="company-card">
-                    <img src="#" alt="company" class="company-image">
+                    <img src="img/Titan-min-e1556729424998.png" alt="company" class="company-image">
                 </a>
             </div>
-            <div class="col-md-2">
+            <div class="col-lg col-12 col-md-6">
                 <a href="#" class="company-card">
-                    <img src="#" alt="company" class="company-image">
+                    <img src="img/GateCityBank-min-e1556729504903.png" alt="company" class="company-image">
                 </a>
             </div>
-            <div class="col-md-2">
+            <div class="col-lg col-12 col-md-6">
                 <a href="#" class="company-card">
-                    <img src="#" alt="company" class="company-image">
+                    <img src="img/OtterTail-min-e1556729449309.png" alt="company" class="company-image">
                 </a>
             </div>
-            <div class="col-md-2">
+            <div class="col-lg col-12 col-md-6">
                 <a href="#" class="company-card">
-                    <img src="#" alt="company" class="company-image">
+                    <img src="img/Wishek-min-e1556729466278.png" alt="company" class="company-image">
                 </a>
             </div>
-            <div class="col-md-2 mr-auto">
+            <div class="col-lg col-12 col-md-6">
                 <a href="#" class="company-card">
-                    <img src="#" alt="company" class="company-image">
+                    <img src="img/Amity-min.png" alt="company" class="company-image">
+                </a>
+            </div>
+        </div>
+
+        <div class="row company-cards-row">
+            <div class="col-lg col-12 col-md-6">
+                <a href="#" class="company-card">
+                    <img src="img/AmericanCrystalSugarCompany-1-min-e1556729221874.png" alt="company" class="company-image">
+                </a>
+            </div>
+            <div class="col-lg col-12 col-md-6">
+                <a href="#" class="company-card">
+                    <img src="img/Cardconnect-min-e1556729572152.png" alt="company" class="company-image">
+                </a>
+            </div>
+            <div class="col-lg col-12 col-md-6">
+                <a href="#" class="company-card">
+                    <img src="img/DawsonInsurance-min-e1556729399259.png" alt="company" class="company-image">
+                </a>
+            </div>
+            <div class="col-lg col-12 col-md-6">
+                <a href="#" class="company-card">
+                    <img src="img/Tower_Solutions_500px_by_300px_Client_Logo-min-e1556729375235.png" alt="company" class="company-image">
+                </a>
+            </div>
+            <div class="col-lg col-12 col-md-6">
+                <a href="#" class="company-card">
+                    <img src="img/apex-min-e1556729521464.png" alt="company" class="company-image">
+                </a>
+            </div>
+        </div>
+
+        <div class="row company-cards-row">
+            <div class="col-lg col-12 col-md-6">
+                <a href="#" class="company-card">
+                    <img src="img/TCILogo-min-e1556729345457.png" alt="company" class="company-image">
+                </a>
+            </div>
+            <div class="col-lg col-12 col-md-6">
+                <a href="#" class="company-card">
+                    <img src="img/NexusCapital-min-e1556729558512.png" alt="company" class="company-image">
+                </a>
+            </div>
+            <div class="col-lg col-12 col-md-6">
+                <a href="#" class="company-card">
+                    <img src="img/oday-min-e1556729482909.png" alt="company" class="company-image">
+                </a>
+            </div>
+            <div class="col-lg col-12 col-md-6">
+                <a href="#" class="company-card">
+                    <img src="img/Paradiso-min-e1556729270928.png" alt="company" class="company-image">
+                </a>
+            </div>
+            <div class="col-lg col-12 col-md-6">
+                <a href="#" class="company-card">
+                    <img src="img/Nemont-min-e1556729541263-min.png" alt="company" class="company-image">
                 </a>
             </div>
         </div>
     </div>
+</section>
+
+<section class="section-start">
+    <div class="container-lg">
+        <div class="row">
+            <div class="col-12">
+                <h3 class="ready-start-title">
+                    Ready to Get Started?
+                </h3>
+                <p class="ready-start-text">
+                    Tell us about your project. Answer a few short questions and we'll reach out to provide a free consultation.
+                </p>
+            </div>
+        </div>
+        <div class="row" style="margin-top: 35px;">
+            <div class="offset-md-4 col-md-4">
+                <a href="#" class="start-btn">
+                    Work With Us  <i class="fas fa-arrow-right"></i>
+                </a>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="addresses">
+    <div class="address-cards" style="background: url(img/fargo-office-min.jpg) no-repeat center center / cover">
+        <h4 class="address-city">
+            Fargo
+        </h4>
+        <p class="address-exact">
+            630 1st Ave N, Suite 5 <br>
+            Fargo, ND 58102
+        </p>
+        <div class="address-tel">
+            <a href="tel:+1-701-356-9010">(701) 356-9010</a>
+        </div>
+    </div>
+
+    <div class="address-cards" style="background: url(img/minneapolis-office-min-min.jpg) no-repeat center center / cover">
+        <h4 class="address-city">
+            Minneapolis
+        </h4>
+        <p class="address-exact">
+            3800 American Blvd W, Suite 1500 <br>
+            Bloomington, MN 55431
+        </p>
+        <div class="address-tel">
+            <a href="tel:+1-612-268-2900">(612) 268-2900</a>
+        </div>
+    </div>
+
+    <div class="address-cards" style="background: url(img/denver-min.jpg) no-repeat center center / cover">
+        <h4 class="address-city">
+            Denver
+        </h4>
+        <p class="address-exact">
+            1001 Bannock Street, Suite 485 <br>
+            Denver, CO 80204
+        </p>
+        <div class="address-tel">
+            <a href="tel:+1-720-892-6206">(720) 892-6206</a>
+        </div>
+    </div>
 
 </section>
+
+<footer class="footer">
+    <div class="container p-0">
+        <div class="row">
+            <div class="col-md-4">
+                <div class="footer-address">
+                    <img src="img/onsharp_footer-min.png" width="200" height="auto" sizes="(max-width: 300px) 100vw, 300px" alt="logo" class="footer-logo">
+                    <p class="footer-address-text">
+                        <strong style="color: #dddddd;">Onsharp, Inc.</strong> <br>
+                        <a style="color: white;" href="https://goo.gl/maps/CzDRvvGdp3r6bUcn7" target="_blank" rel="noopener">630 1st Ave N, Suite 5<br>
+                            Fargo, ND 58102
+                        </a>
+                    </p>
+                    <div class="address-tel">
+                        <a href="tel:+1-701-356-9010">(701) 356-9010</a>
+                    </div>
+                    <a href="#" class="footer-contact-btn">
+                        Contact Onsharp Support
+                    </a>
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="footer-address not-first">
+                    <p class="footer-address-text">
+                        <strong style="color: #dddddd;">Onsharp, Inc.</strong> <br>
+                        <a style="color: white;" href="https://goo.gl/maps/CZAbtSSB3hVN5dA3A" target="_blank" rel="noopener">3800 American Blvd W, Suite 1500<br>
+                            Bloomington, MN 55431
+                        </a>
+                    </p>
+                    <div class="address-tel">
+                        <a href="tel:+1-612-268-2900">(612) 268-2900</a>
+                    </div>
+                    <a href="#" class="footer-contact-btn">
+                        Contact Onsharp Support
+                    </a>
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="footer-address not-first">
+                    <p class="footer-address-text">
+                        <strong style="color: #dddddd;">Onsharp, Inc.</strong> <br>
+                        <a style="color: white;" href="https://goo.gl/maps/J5goMGxaVmrRnATS7" target="_blank" rel="noopener">1001 Bannock Street, Suite 485<br>
+                            Denver, CO 80204
+                        </a>
+                    </p>
+                    <div class="address-tel">
+                        <a href="tel:+1-720-892-6206">(720) 892-6206</a>
+                    </div>
+                    <a href="#" class="footer-contact-btn">
+                        Contact Onsharp Support
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="row contacts-row">
+            <div class="col-md-4 offset-md-4">
+                <h3 class="email-contact-title">
+                    SIGN UP FOR OUR NEWSLETTER
+                </h3>
+                <form>
+                    <div class="form-group email-contact-form">
+                        <label for="exampleInputEmail1">Email<span style="color: red">*</span></label>
+                        <input type="email" required placeholder="Email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                        <button type="submit" class="email-contact-submit main-button" value="Submit">Submit</button>
+                    </div>
+                </form>
+            </div>
+
+            <div class="col-md-4 text-center">
+                <a href="#">
+                    <img src="img/onsharp-hubspot-solutions-partner.png" alt="partner" class="contacts-image-partner">
+                </a>
+                <p class="partner-text">
+                    Onsharp is a <a href="#" class="partner-link">HubSpot Solutions Partner.</a>
+                </p>
+
+                <ul class="social-networks-buttons">
+                    <li class="social-network-btn">
+                        <a href=""></a>
+                    </li>
+                    <li class="social-network-btn">
+                        <a href=""></a>
+                    </li>
+                    <li class="social-network-btn">
+                        <a href=""></a>
+                    </li>
+                    <li class="social-network-btn">
+                        <a href=""></a>
+                    </li>
+                </ul>
+
+            </div>
+        </div>
+
+
+    </div>
+
+</footer>
+
 
 <script src="js/bootstrap.min.js"></script>
 
