--- a/onsharp-copy/index.html
+++ b/onsharp-copy/index.html
@@ -18,7 +18,7 @@
 
 
 <header class="site-header">
-    <div class="container-md">
+    <div class="container-xl">
         <div class="row">
             <nav class="navbar navbar-expand-md p-0 w-100">
                 <div class="col-md-3 pl-0">
@@ -50,7 +50,7 @@
 </header>
 
 <section class="header-section">
-    <div class="container">
+    <div class="container-xl">
         <div class="row">
             <div class="col pl-0 pr-0">
                 <div class="header-title__label">
@@ -69,9 +69,9 @@
 
 
 <section class="what-we-do">
-    <div class="container p-0">
+    <div class="container-xl p-xl-0">
         <div class="row">
-            <div class="col pr-0 pl-0">
+            <div class="col pr-xl-0 pl-xl-0">
                 <div class="what-we-do-title">
                     <h3 class="what-we-do-title__label">
                         WHAT WE DO
@@ -131,7 +131,7 @@
 </section>
 
 <section class="location-numbers">
-    <div class="container">
+    <div class="container-xl">
         <div class="row d-flex justify-content-between text-center">
             <div class="col-md-4 p-0">
                 <div class="location-number">
@@ -162,7 +162,7 @@
 </section>
 
 <section class="serve">
-    <div class="container p-0">
+    <div class="container-xl p-xl-0">
         <div class="row">
             <div class="col-md-6">
                 <div class="serve-title-block">
@@ -352,7 +352,7 @@
 </section>
 
 <section class="subscribe">
-    <div class="container">
+    <div class="container-xl">
         <div class="row">
             <div class="col d-flex flex-column justify-content-center">
                 <h2 class="subscribe-title">
@@ -375,7 +375,7 @@
 
 
 <section class="companies">
-    <div class="container p-0">
+    <div class="container-xl p-xl-0">
         <div class="row">
             <div class="col pr-0 pl-0">
                 <div class="what-we-do-title">
@@ -476,7 +476,7 @@
 </section>
 
 <section class="section-start">
-    <div class="container-lg">
+    <div class="container-xl">
         <div class="row">
             <div class="col-12">
                 <h3 class="ready-start-title">
@@ -488,7 +488,7 @@
             </div>
         </div>
         <div class="row" style="margin-top: 35px;">
-            <div class="offset-md-4 col-md-4">
+            <div class="offset-xl-4 col-xl-4">
                 <a href="#" class="start-btn">
                     Work With Us  <i class="fas fa-arrow-right"></i>
                 </a>
@@ -540,9 +540,9 @@
 </section>
 
 <footer class="footer">
-    <div class="container p-0">
+    <div class="container-xl p-xl-0">
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-4">
                 <div class="footer-address">
                     <img src="img/onsharp_footer-min.png" width="200" height="auto" sizes="(max-width: 300px) 100vw, 300px" alt="logo" class="footer-logo">
                     <p class="footer-address-text">
@@ -560,7 +560,7 @@
                 </div>
             </div>
 
-            <div class="col-md-4">
+            <div class="col-4">
                 <div class="footer-address not-first">
                     <p class="footer-address-text">
                         <strong style="color: #dddddd;">Onsharp, Inc.</strong> <br>
@@ -577,7 +577,7 @@
                 </div>
             </div>
 
-            <div class="col-md-4">
+            <div class="col-4">
                 <div class="footer-address not-first">
                     <p class="footer-address-text">
                         <strong style="color: #dddddd;">Onsharp, Inc.</strong> <br>
@@ -595,7 +595,7 @@
             </div>
         </div>
         <div class="row contacts-row">
-            <div class="col-md-4 offset-md-4">
+            <div class="col-4 offset-4">
                 <h3 class="email-contact-title">
                     SIGN UP FOR OUR NEWSLETTER
                 </h3>
@@ -608,7 +608,7 @@
                 </form>
             </div>
 
-            <div class="col-md-4 text-center">
+            <div class="col-4 text-center">
                 <a href="#">
                     <img src="img/onsharp-hubspot-solutions-partner.png" alt="partner" class="contacts-image-partner">
                 </a>
@@ -651,7 +651,7 @@
         </div>
 
         <div class="row">
-            <div class="col-md-4 offset-md-4">
+            <div class="col-4 offset-4">
                 <div class="all-right-reserved-container">
                     <span class="all-right-reserved">
                     © 2020 Onsharp, Inc. All Rights Reserved.
