--- a/onsharp-copy/index.html
+++ b/onsharp-copy/index.html
@@ -20,7 +20,7 @@
 <header class="site-header">
     <div class="container-xl">
         <div class="row">
-            <nav class="navbar navbar-expand-md p-0 w-100">
+            <nav class="navbar navbar-expand-lg p-0 w-100">
                 <div class="col-md-3 pl-0">
                     <a class="navbar-brand p-0" href="#">
                         <img src="img/onsharp-logo-min.png" alt="Onsharp" width="300" height="73" class="header-logo">
@@ -29,7 +29,7 @@
 
                 <div class="col-md-9 pr-0">
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
+                        <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                         <div class="navbar-nav ml-auto align-items-center">
@@ -52,7 +52,7 @@
 <section class="header-section">
     <div class="container-xl">
         <div class="row">
-            <div class="col pl-0 pr-0">
+            <div class="col pl-xl-0 pr-xl-0">
                 <div class="header-title__label">
                     <span style="color: #ffffff">DESIGN.</span>
                     <span style="color: #8b9b93">BUILD.</span>
@@ -364,7 +364,7 @@
             </div>
         </div>
         <div class="row" style="margin-top: 40px;">
-            <div class="offset-4 col-md-4">
+            <div class="offset-md-4 col-md-4">
                 <a href="#" class="subscribe-btn">
                     Sign Me Up!
                 </a>
@@ -377,7 +377,7 @@
 <section class="companies">
     <div class="container-xl p-xl-0">
         <div class="row">
-            <div class="col pr-0 pl-0">
+            <div class="col pr-xl-0 pl-xl-0">
                 <div class="what-we-do-title">
                     <h3 class="what-we-do-title__label">
                         OUR WORK GETS NOTICED
@@ -389,89 +389,25 @@
             </div>
         </div>
 
-        <div class="row company-cards-row">
-            <div class="col-lg col-12 col-md-6">
-                <a href="#" class="company-card">
-                    <img src="img/Titan-min-e1556729424998.png" alt="company" class="company-image">
-                </a>
-            </div>
-            <div class="col-lg col-12 col-md-6">
-                <a href="#" class="company-card">
-                    <img src="img/GateCityBank-min-e1556729504903.png" alt="company" class="company-image">
-                </a>
-            </div>
-            <div class="col-lg col-12 col-md-6">
-                <a href="#" class="company-card">
-                    <img src="img/OtterTail-min-e1556729449309.png" alt="company" class="company-image">
-                </a>
-            </div>
-            <div class="col-lg col-12 col-md-6">
-                <a href="#" class="company-card">
-                    <img src="img/Wishek-min-e1556729466278.png" alt="company" class="company-image">
-                </a>
-            </div>
-            <div class="col-lg col-12 col-md-6">
-                <a href="#" class="company-card">
-                    <img src="img/Amity-min.png" alt="company" class="company-image">
-                </a>
-            </div>
+        <div class="company-cards-container">
+            <img src="img/Titan-min-e1556729424998.png" alt="company" class="company-image">
+            <img src="img/GateCityBank-min-e1556729504903.png" alt="company" class="company-image">
+            <img src="img/OtterTail-min-e1556729449309.png" alt="company" class="company-image">
+            <img src="img/Wishek-min-e1556729466278.png" alt="company" class="company-image">
+            <img src="img/Amity-min.png" alt="company" class="company-image">
+            <img src="img/AmericanCrystalSugarCompany-1-min-e1556729221874.png" alt="company" class="company-image">
+            <img src="img/Cardconnect-min-e1556729572152.png" alt="company" class="company-image">
+            <img src="img/DawsonInsurance-min-e1556729399259.png" alt="company" class="company-image">
+            <img src="img/Tower_Solutions_500px_by_300px_Client_Logo-min-e1556729375235.png" alt="company" class="company-image">
+            <img src="img/apex-min-e1556729521464.png" alt="company" class="company-image">
+            <img src="img/TCILogo-min-e1556729345457.png" alt="company" class="company-image">
+            <img src="img/NexusCapital-min-e1556729558512.png" alt="company" class="company-image">
+            <img src="img/oday-min-e1556729482909.png" alt="company" class="company-image">
+            <img src="img/Paradiso-min-e1556729270928.png" alt="company" class="company-image">
+            <img src="img/Nemont-min-e1556729541263-min.png" alt="company" class="company-image">
         </div>
 
-        <div class="row company-cards-row">
-            <div class="col-lg col-12 col-md-6">
-                <a href="#" class="company-card">
-                    <img src="img/AmericanCrystalSugarCompany-1-min-e1556729221874.png" alt="company" class="company-image">
-                </a>
-            </div>
-            <div class="col-lg col-12 col-md-6">
-                <a href="#" class="company-card">
-                    <img src="img/Cardconnect-min-e1556729572152.png" alt="company" class="company-image">
-                </a>
-            </div>
-            <div class="col-lg col-12 col-md-6">
-                <a href="#" class="company-card">
-                    <img src="img/DawsonInsurance-min-e1556729399259.png" alt="company" class="company-image">
-                </a>
-            </div>
-            <div class="col-lg col-12 col-md-6">
-                <a href="#" class="company-card">
-                    <img src="img/Tower_Solutions_500px_by_300px_Client_Logo-min-e1556729375235.png" alt="company" class="company-image">
-                </a>
-            </div>
-            <div class="col-lg col-12 col-md-6">
-                <a href="#" class="company-card">
-                    <img src="img/apex-min-e1556729521464.png" alt="company" class="company-image">
-                </a>
-            </div>
-        </div>
 
-        <div class="row company-cards-row">
-            <div class="col-lg col-12 col-md-6">
-                <a href="#" class="company-card">
-                    <img src="img/TCILogo-min-e1556729345457.png" alt="company" class="company-image">
-                </a>
-            </div>
-            <div class="col-lg col-12 col-md-6">
-                <a href="#" class="company-card">
-                    <img src="img/NexusCapital-min-e1556729558512.png" alt="company" class="company-image">
-                </a>
-            </div>
-            <div class="col-lg col-12 col-md-6">
-                <a href="#" class="company-card">
-                    <img src="img/oday-min-e1556729482909.png" alt="company" class="company-image">
-                </a>
-            </div>
-            <div class="col-lg col-12 col-md-6">
-                <a href="#" class="company-card">
-                    <img src="img/Paradiso-min-e1556729270928.png" alt="company" class="company-image">
-                </a>
-            </div>
-            <div class="col-lg col-12 col-md-6">
-                <a href="#" class="company-card">
-                    <img src="img/Nemont-min-e1556729541263-min.png" alt="company" class="company-image">
-                </a>
-            </div>
-        </div>
     </div>
 </section>
 
@@ -666,7 +602,7 @@
 
 </footer>
 
-
+<script src="jquery-3.5.1.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 
 </body>
