Добавлен первый заказ

--- a/onsharp-copy/index.html
+++ b/onsharp-copy/index.html
@@ -58,21 +58,26 @@
 
                 <div class="col-12 p-0">
                     <div id="mobileNavbar" class="collapse navbar-collapse">
-                        <ul class="navbar-nav ml-auto align-items-center">
+                        <ul class="navbar-nav ml-auto">
                             <li class="nav-item">
                                 <a class="nav-link mobile-navigation-link" href="#">WHAT WE DO</a>
+                                <a class="mobile-menu-element-expand" data-toggle="collapse" href="#multiCollapseExample1" role="button" aria-expanded="false" aria-controls="multiCollapseExample1"><i class="fas fa-angle-down"></i></a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link mobile-navigation-link" href="#">WHO WE SERVE</a>
+                                <a class="mobile-menu-element-expand" data-toggle="collapse" href="#multiCollapseExample1" role="button" aria-expanded="false" aria-controls="multiCollapseExample1"><i class="fas fa-angle-down"></i></a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link mobile-navigation-link" href="#">OUR WORK</a>
+                                <a class="mobile-menu-element-expand" data-toggle="collapse" href="#multiCollapseExample1" role="button" aria-expanded="false" aria-controls="multiCollapseExample1"><i class="fas fa-angle-down"></i></a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link mobile-navigation-link" href="#">ABOUT</a>
+                                <a class="mobile-menu-element-expand" data-toggle="collapse" href="#multiCollapseExample1" role="button" aria-expanded="false" aria-controls="multiCollapseExample1"><i class="fas fa-angle-down"></i></a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link mobile-navigation-link" href="#">RESOURCES</a>
+                                <a class="mobile-menu-element-expand" data-toggle="collapse" href="#multiCollapseExample1" role="button" aria-expanded="false" aria-controls="multiCollapseExample1"><i class="fas fa-angle-down"></i></a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link mobile-navigation-link" href="#">WORK WITH US</a>
